--- a/index.html
+++ b/index.html
@@ -103,12 +103,30 @@
       </div>
     </div>
   </section>
+   <div class="custom-section" id="tableau" style="text-align: center;">
+  <h2>BYU Football Tableau Stats</h2>
+  <p>Check out these interactive stats visualized from Tableau:</p>
+  <div style="display: inline-block; max-width: 800px; width: 90%;">
+    <iframe 
+      src="C:\Users\Home\OneDrive - Brigham Young University\IS 201\byu\Points Difference Dashboard.png"
+      width="100%" 
+      height="600" 
+      frameborder="0" 
+      style="border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);" 
+      allowfullscreen>
+    </iframe>
+  </div>
+</div>
 
   <!-- Footer -->
   <footer>
     &copy; 2025 BYU Football Stats | Built by Treven
   </footer>
 
+
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
