--- a/resume.html
+++ b/resume.html
@@ -24,7 +24,7 @@
 </head>
 <body>
   <div class="container">
-    <a href="webdevproject.html" class="btn btn-primary back-button">← Back to Main Page</a>
+    <a href="index.html" class="btn btn-primary back-button">← Back to Main Page</a>
 
     <h1>Treven C. Anderson</h1>
     <p>3322 West Jordan Knoll Circle, South Jordan, UT 84095<br/>
