--- a/index.html
+++ b/index.html
@@ -103,20 +103,18 @@
       </div>
     </div>
   </section>
-   <div class="custom-section" id="tableau" style="text-align: center;">
+
+
+ <div class="custom-section" id="tableau" style="margin-bottom: 80px; text-align: center;">
   <h2>BYU Football Tableau Stats</h2>
   <p>Check out these interactive stats visualized from Tableau:</p>
-  <div style="display: inline-block; max-width: 800px; width: 90%;">
-    <iframe 
-      src="C:\Users\Home\OneDrive - Brigham Young University\IS 201\byu\Points Difference Dashboard.png"
-      width="100%" 
-      height="600" 
-      frameborder="0" 
-      style="border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);" 
-      allowfullscreen>
-    </iframe>
+  <img src="Points%20Difference%20Dashboard.png" 
+       alt="BYU Points Difference Dashboard" 
+       style="max-width: 70%; height: auto; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); margin-top: 20px;">
+
   </div>
-</div>
+</body>
+</html>
 
   <!-- Footer -->
   <footer>
@@ -129,4 +127,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
