--- a/ai-app.html
+++ b/ai-app.html
@@ -2,101 +2,59 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Résumé - Treven C. Anderson</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <title>AI Joke Generator</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f5f7fa;
-      padding: 20px;
-    }
-    .container {
-      max-width: 900px;
-      margin: auto;
-      background: white;
+      background: #f7f9fc;
+      text-align: center;
       padding: 40px;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     }
-    h2 {
-      border-bottom: 2px solid #002654;
-      padding-bottom: 5px;
-      margin-top: 30px;
+    h1 {
+      color: #002654;
     }
-    ul {
-      padding-left: 20px;
+    #joke-box {
+      margin: 20px auto;
+      padding: 20px;
+      border-radius: 10px;
+      max-width: 500px;
+      background-color: #fff;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-    .btn-back {
-      margin-top: 30px;
+    button {
+      padding: 10px 20px;
+      font-size: 1rem;
+      color: white;
+      background-color: #002654;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #00509e;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Treven C. Anderson</h1>
-    <p>3322 West Jordan Knoll Circle, South Jordan, UT 84095<br>
-       (801) 300-1497 · treven17@byu.edu</p>
+  <h1>AI Joke Generator</h1>
+  <div id="joke-box">Click the button to get a joke!</div>
+  <button onclick="generateJoke()">Get Joke</button>
+  <br /><br />
+  <a href="scratch.html">← Back to Scratch Page</a>
 
-    <h2>Education</h2>
-    <p><strong>Brigham Young University – Marriott School of Business</strong>, Provo, UT<br>
-    Bachelor of Science, Finance with Psychology Minor, Aug 2022 – Dec 2026<br>
-    GPA: 3.81/4.00</p>
-    <ul>
-      <li>The Regents Scholarship, Academic</li>
-      <li>Member of BYU Finance Society and PBWMA</li>
-    </ul>
+  <script>
+    const jokes = [
+      "Why don’t football teams use the internet? Too many dropped packets.",
+      "Why was the football stadium so cold? It was full of fans.",
+      "Why did the linebacker bring string to the game? To tie the score!",
+      "Why did BYU bring a ladder to the game? Because they were playing in a higher league!",
+      "How do BYU fans stay cool? They sit in the shade of their reputation!"
+    ];
 
-    <h2>Experience</h2>
-    <p><strong>Merrill Advisors</strong>, Provo, UT – Junior Associate (Aug 2023 – Present)</p>
-    <ul>
-      <li>Managed Money movement of 300 million AUM</li>
-      <li>Increased annual IRA contributions 10% through client outreach</li>
-      <li>Series 65 Uniform Investment Adviser license</li>
-      <li>Acquired 2.5 million new AUM in first 5 months</li>
-    </ul>
-
-    <p><strong>Ambia Solar</strong>, O’Fallon, IL – Sales Representative (Jan 2024 – Aug 2024)</p>
-    <ul>
-      <li>Increased Company revenue $1,000,000</li>
-      <li>Managed 40 solar installations</li>
-      <li>Maintained 70% close to install ratio</li>
-    </ul>
-
-    <p><strong>Eve Financial</strong>, Pleasant Grove, UT – Quality Assurance Analyst (Oct 2022 – Apr 2023)</p>
-    <ul>
-      <li>Built 50+ automated test scripts in Java for vulnerability testing</li>
-      <li>Increased web traffic by 4% through design improvements</li>
-      <li>Decreased monthly bug total by 25% with weekly bug reports</li>
-    </ul>
-
-    <p><strong>BYU Athletic Department</strong>, Provo, UT – Fulfillment Intern (Aug 2022 – Jan 2023)</p>
-    <ul>
-      <li>Managed client fulfillment for 12 corporate sponsorships</li>
-      <li>Planned 50+ person appreciation events for contract negotiations</li>
-    </ul>
-
-    <h2>Volunteer Service</h2>
-    <p><strong>UTE Conference Little League Football</strong>, South Jordan, UT – Defensive Backs Coach (Jul 2019 – Nov 2019)</p>
-    <ul>
-      <li>Led league in interceptions with 6 coached DBs</li>
-      <li>Built strong player and parent relationships</li>
-    </ul>
-
-    <p><strong>The Church of Jesus Christ of Latter-day Saints</strong>, Dominican Republic – Volunteer (Aug 2020 – Jul 2022)</p>
-    <ul>
-      <li>Led addiction recovery and English courses (100+ students)</li>
-      <li>Trained 20+ missionaries in discipline and leadership</li>
-    </ul>
-
-    <h2>Skills & Interests</h2>
-    <ul>
-      <li>Fluent in Spanish (Low-advanced)</li>
-      <li>Eagle Scout</li>
-      <li>1st Place Half Marathon Finisher – Mainly Marathons</li>
-    </ul>
-
-    <a class="btn btn-primary btn-back" href="index.html">← Back to Home</a>
-  </div>
+    function generateJoke() {
+      const random = Math.floor(Math.random() * jokes.length);
+      document.getElementById('joke-box').innerText = jokes[random];
+    }
+  </script>
 </body>
 </html>
